Configuración de cadena de conexión y migración de BD.

--- a/SistemaInventario/appsettings.json
+++ b/SistemaInventario/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SistemaInventario-fe27590b-51e8-4baa-bfcc-f934462cfcce;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=LAPTOP-EOMM6UAJ;Database=SistemaInventario;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
